[package]
name = "brp-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ansi_term = "0.12"
clap = { version = "4", features = ["derive"] }
binrw = "0.11"
thiserror = "1"
itertools = "0.10"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
